@@ -1630,9 +1630,7 @@ _entry_changed_common_handling(void *data, const char *event)
    evas_event_thaw_eval(evas_object_evas_get(data));
    if ((wd->autosave) && (wd->file))
      wd->delay_write = ecore_timer_add(2.0, _delay_write, data);
-   /* callback - this could call callbacks that delete the entry... thus...
-    * any access to wd after this could be invalid */
-   evas_object_smart_callback_call(data, event, NULL);
+
    _check_enable_return_key(data);
    text = edje_object_part_text_get(wd->ent, "elm.text");
    if (text)
@@ -1642,6 +1640,9 @@ _entry_changed_common_handling(void *data, const char *event)
         else
           _elm_entry_update_guide(data, EINA_FALSE);
      }
+   /* callback - this could call callbacks that delete the entry... thus...
+    * any access to wd after this could be invalid */
+   evas_object_smart_callback_call(data, event, NULL);
 }
 
 static void
