@@ -719,3 +719,7 @@
 2013-01-17  Bora Hwang (bora1.hwang@samsung.com)
 
         * when parent of ctxpopup is resized, ctxpopup calls dismissed signal
+
+2013-01-19  WooHyun Jung
+
+        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.
